release notes databene commons 0.5.5
------------------------------------



Enhancements
------------




Bug fixes (find the tracker at http://sourceforge.net/tracker/?group_id=222964&atid=1057386)
--------------------------------------------------------------------------------------------
- Cloning support of MultiConverterWrapper and ConverterChain
- Grouping and decimal precision support in PadFormat